[metadata]
name = poold 
version = 0.0.5
author = Genevieve Flaspohler and Lester Mackey
author_email = geflaspohler@gmail.com
description = Python library for Optimistic Online Learning under Delay.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geflaspohler/poold
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

python_requires = >=3.6

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib                     
    seaborn
    scipy

[options.packages.find]
where = src 
